--- a/04-仿JD移动端/index.html
+++ b/04-仿JD移动端/index.html
@@ -206,7 +206,7 @@
             </div>
             <div class="content-box clearfix">
                 <div class="content-title">
-                    <h3>京东超市</h3>
+                    <h3>京东超市1</h3>
                 </div>
                 <lu class="content-ul">
                     <li class="fr">
