--- a/05-微金所/index.html
+++ b/05-微金所/index.html
@@ -109,7 +109,7 @@
                 <li data-target="#carousel-example-generic" data-slide-to="3"></li>
             </ol>
 
-            <!-- 轮播图主体部分 -->
+            <!-- 轮播图主体部分123567888 -->
             <div class="carousel-inner" role="listbox">
                 <!-- HTML5 增加了一项新功能是 自定义数据属性 ，也就是  data-* 自定义属性。
                     jQuery中可以使用data()方法获取自定义属性的值 -->
