--- a/05-微金所/index.html
+++ b/05-微金所/index.html
@@ -115,7 +115,7 @@
                     jQuery中可以使用data()方法获取自定义属性的值 -->
                 <div class="item active" data-large-image="./images/slide_01_2000x410.jpg" data-small-image="./images/slide_01_640x340.jpg">
                     <!-- 这里面的轮播图片使用jq动态添加，否则加大小图的话，加载的时候，不管是大屏幕还是小屏幕
-                        大小图都会加载，浪费流量 -->
+                        大小图都会加载，浪费流量456464 -->
 
                     <!-- 每张轮播图的图片说明，这里不需要 -->
                     <!-- <div class="carousel-caption">
