--- a/05-微金所/index.html
+++ b/05-微金所/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>微金所</title>
     <link href="./lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <!-- 在线字体图标文件 -->
+    <!-- 在线字体图标文件 b1 -->
     <link href="./lib/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/common.css">
     <link rel="stylesheet" href="./css/wjs-index.css">
